welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:3: error: not found: value ||
	if (a>12 && a<20) || (b>12 && b<20) x=19
                          ^